tests/fixtures/invalid/pow_none_none_list.py
# Cannot call pow() with None, None, List[int]
x = pow(None, None, [1, 2, 3])
